paystubs, edt_files, current_doctor

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -51,19 +51,24 @@
   <%= f.text_field :group_no %>
   </div>
 
-  <div class="col-sm-4">
+  <div class="col-sm-3">
   <%= f.label :'Billing No' %>
   <%= f.text_field :billing_num %>
   </div>
 
-  <div class="col-sm-4">
+  <div class="col-sm-3">
   <%= f.label :'License No' %>
   <%= f.text_field :licence_no %>
   </div>
 
-  <div class="col-sm-4">
+  <div class="col-sm-3">
   <%= f.label :specialty %>
   <%= f.text_field :specialty %>
+  </div>
+  
+  <div class="col-sm-3">
+  <%= f.label 'Percent Deduction' %>
+  <%= f.text_field :percent_deduction %>
   </div>
 
   </div>
