--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -20,6 +20,7 @@
 	      Addr: <%= @doctor.address %>
 		    <%= @doctor.city %> <%= @doctor.prov %> <%= @doctor.postal %>
 	      Office: <%= @doctor.office %>
+	      Percent Deduction: <%= @doctor.percent_deduction %>
            </pre>
 
 	    
