--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,6 +53,7 @@
      <li><%= link_to "Reports", reports_path %></li>
      <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
      <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
+     <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
   </ul>
 </li>
 
