--- a/app/assets/stylesheets/paystubs.scss
+++ b/app/assets/stylesheets/paystubs.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the edt_files_controller controller here.
+// Place all the styles related to the paystubs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
