--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -29,12 +29,12 @@
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_md">Health #</th>
           <th class="tbl_sm">Ver</th>
-          <th class="tbl_lmd">Procedure(s)</th>
-          <th class="tbl_sm">Units</th>
           <th class="tbl_md">Diagnosis</th>
+          <th class="tbl_lmd">Procedure(s)</th>
+          <th class="tbl_lsm">HCPSvcs</th>
           <th class="tbl_xmd">Ttl. Fee</th>
           <th class="tbl_md">Status</th>
-	  <th class="tbl_md">Cab Ref#</th>
+	  <th class="tbl_md">Acc Ref#</th>
       </tr>
   </thead>
   <tbody>
