visit reason used for description in receipt; progress bar green 10px

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -425,3 +425,10 @@ table.pretty {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.turbolinks-progress-bar {
+   height: 10px;
+   background-color: green;
+}
+
+    
