previously unbilled shown in daysheet; tweaks to reports

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -427,8 +427,8 @@ table.pretty {
 }
 
 .turbolinks-progress-bar {
-   height: 10px;
-   background-color: green;
+   height: 3px;
+   background-color: blue;
 }
 
     
