--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -7,7 +7,7 @@
 	<td><%= patient.hin_expiry %> </td>
 	<td><%= patient.dob %> </td>
 	<td><%= patient.last_visit_date %> </td> 
-	<td><%= patient.visits.count %> </td>
+	<td><%= patient.visits.count rescue 0 %> </td>
 	<td><%= num_to_phone(patient.phone) %> </td> 
 	<td><%= link_to 'Label', addrlabel_patient_path(patient), target: 'Label' %> </td>
 	<!--	<td><%= "#{patient.addr} #{patient.city}, #{patient.prov} #{patient.postal}" %> </td>  -->
