--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -19,6 +19,7 @@
 	  <th>Last Visit </th>
 	  <th class="tbl_sm">Visits</th>
           <th>Phone</th>
+          <th>Chart</th>
  	  <th>Addr Label</th>
 	  <%=  "<th></th>".html_safe if current_user.admin? %>
       </tr>
