--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -59,7 +59,7 @@
 	    <th>Diagnosis</th>
 	    <th class="tbl_xlg">Procedure(s)</th>
 	    <th>Status</th>
-	    <th>CabMD Ref#</th>
+	    <th>Bill Ref#</th>
 	  </tr>
 	  <tbody>
 
