--- a/app/views/reports/_visit.html.erb
+++ b/app/views/reports/_visit.html.erb
@@ -10,7 +10,7 @@
 	<td><%= visit.proc_codes %></td>
 	<td><%= BILLING_TYPES.invert[visit.bil_type] %></td>
 	<td><%= sprintf("%.2f",visit.total_fee) %></td>
-	<td><%= visit.status_str %></td>
 	<td><%= visit.entry_by %></td>
+	<td><%= visit.export_file %></td>
 
 </tr>
