--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,8 @@
 <% if logged_in? %> 
 <% if controller_name == 'daysheet' || controller_name == 'billings' %>
 	<% date = Date.parse(params[:date]) rescue Time.now %>
-	<% prevday = date.prev_day.strftime('%Y-%m-%d') %>
-	<% nextday = date.next_day.strftime('%Y-%m-%d') %>
+	<% prevday = date.prev_day.strftime('%d-%m-%Y') %>
+	<% nextday = date.next_day.strftime('%d-%m-%Y') %>
        <li style="width: 40px; align:left; top: 2px;"><%= link_to '<span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>'.html_safe, params.permit(:date).merge(date: prevday )  %></li>
        <li> 
        <%= form_with  method: :get, skip_enforcing_utf8: :true  do |f| %>
@@ -47,47 +47,13 @@
 <li class="<%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
 <li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
 <li class="<%= 'active' if controller_name == 'billings' %>"><%= link_to "Billing", billings_path %></li>
-<li class="dropdown nav-item <%= 'active' if controller_name == 'reports' || controller_name == 'invoices' || controller_name == 'daily_charts' %>">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Documents <b class="caret"></b> </a>
-  <ul class="dropdown-menu">
-     <li><%= link_to "Reports", reports_path %></li>
-     <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
-     <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
-     <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
-  </ul>
-</li>
 
-<li><%= link_to "Log out", logout_path, method: :delete %> </li>
+<%= render 'layouts/docs' %>
 
-  <% if  current_user.admin?  %>
-          <li class="dropdown nav-item">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Admin <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-	      <li><%= link_to "Profile", edit_user_path(current_user) %></li>
-	      <li><%= link_to "Add User", signup_path %></li>
-	      <li><%= link_to "Users", users_path %></li>
-              <li class="divider"></li>
-          	<li> <%= link_to "Procedures", procedures_path, method: :get %> </li>
-         	<li> <%= link_to "Diagnoses", diagnoses_path, method: :get %> </li>
-         	<li> <%= link_to "Doctors", doctors_path, method: :get %> </li>
-         	<li> <%= link_to "Ins. Providers", providers_path, method: :get %> </li>
-         	<li> <%= link_to "Medications", drugs_path, method: :get %> </li>
-         	<li> <%= link_to "Vaccines", vaccines_path, method: :get %> </li>
-         	<li> <%= link_to "Export Files", export_files_path, method: :get %> </li>
-            </ul>
-          </li>
-  <% else %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              User <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-	      <li><%= link_to "My Profile", edit_user_path(current_user) %></li>
-	    </ul>
-	  </li>
-  <% end %>
+<%= render 'layouts/ref' %>
+  
+  <li><%= link_to "Log out", logout_path, method: :delete %> </li>
+  <%= render 'layouts/admin' if current_user.admin?  %>
 <% else %>
           <li><%= link_to "Log in", login_path %></li>
 <% end %>
