--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -23,5 +23,7 @@
 
 <div class="bottom_buttons ">
 <%= will_paginate @procedures, class: "btn" %>
+<% if current_user.admin?  %>
 <%= button_to "Add Procedure", new_procedure_path, class: "btn btn-primary col-md-12", :method => "get" %>
+<% end %> 
 </div>
