--- a/app/views/vaccines/index.html.erb
+++ b/app/views/vaccines/index.html.erb
@@ -23,5 +23,7 @@
 
 <div class="bottom_buttons ">
 <%= will_paginate @vaccines, class: "btn" %>
+<% if current_user.admin?  %>
 <%= button_to "Add New Vaccine", new_vaccine_path, class: "btn btn-primary col-md-12", :method => "get" %>
+<% end %>
 </div>
