--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -232,6 +232,34 @@ $(pc4).change(function () {
   }
 });
 
+var bt = document.getElementById('visit_bil_type');
+var st = document.getElementById('visit_statuses').getElementsByTagName("option");
+$(bt).change(function() {
+   if ($(this).val() > 3) {	
+	   st[2].disabled = true;
+	   st[3].disabled = false;
+	   st[4].disabled = false;
+   } else {
+	   st[2].disabled = false;
+	   st[3].disabled = true;
+	   st[4].disabled = true;
+   }
+});
+
+var bt2 = document.getElementById('visit_bil_type2');
+var st = document.getElementById('visit_statuses').getElementsByTagName("option");
+$(bt2).change(function() {
+   if ($(this).val() > 3) {	
+	   st[2].disabled = true;
+	   st[3].disabled = false;
+	   st[4].disabled = false;
+   } else {
+	   st[2].disabled = false;
+	   st[3].disabled = true;
+	   st[4].disabled = true;
+   }
+});
+
 function get_bil_type ( code, suff ) {
 	var request = "/procedures/get_by_code?code=" + code;
 	var aj = $.ajax({
@@ -239,8 +267,8 @@ function get_bil_type ( code, suff ) {
         type: 'get',
         data: $(this).serialize()
     }).done(function (data) {
-        select_btype(data, suff);
 	select_statuses(data);
+        select_btype(data, suff);
     }).fail(function (data) {
         console.log('AJAX request has FAILED');
     });
@@ -256,14 +284,23 @@ function select_btype( proc, suff ) {
 }
 
 function select_statuses( proc ) {
+  var bt = document.getElementById('visit_bil_type');
+  var bt2 = document.getElementById('visit_bil_type2');
   var v = document.getElementById('visit_statuses').getElementsByTagName("option");
-  if ( proc.ptype == '1') {
+  if (bt2.value === '') {
+     if (proc.ptype == '1') {
         v[2].disabled = false;
         v[3].disabled = true;
         v[4].disabled = true;
-     } else {
+     }else{
+        v[2].disabled = true;
         v[3].disabled = true;
         v[4].disabled = false;
+     }
+  } else {
+        v[2].disabled = false;
+	v[3].disabled = true;
+	v[4].disabled= true;
   }
 }
 
