--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -16,17 +16,17 @@
 <pre class="pre-scrollable">
 <b>Doctor</b> :    <%= @visit.doctor.lname %>
 <b>Reason for Visit </b>: <%= @visit.reason %>
-<b>Vital signs</b>: T: <%= @visit.temp %> P: <%= @visit.pulse %> BP: <%= @visit.bp %>
 <b>Diagnosis</b> : <%= @visit.diag_code %> : <%= diag.descr rescue '' %>
 <b>Procedure(s)</b> : <%=  @visit.proc_codes %>
 <b>Billing Type(s) </b>: <%= @visit.bil_type_str %>, <%= @visit.bil_type2_str %>, <%= @visit.bil_type3_str %>, <%= @visit.bil_type4_str %>
-<b>Units </b>: <%= @visit.services.collect{|s| s[:units]}.join',' %>
-<b>Insured services: </b><%= sprintf '$%.2f',@visit.total_insured_fees %> <b>Other services:</b> <%= sprintf '$%.2f',@visit.total_non_insured_fees %> <b>Total:</b> <%=  sprintf '$%.2f',@visit.total_fee %>
+<b>Units </b>: <%= @visit.services.collect{|s| s[:units]}.join',' %>0
+<b>Billed amount: <%= sprintf '$%.2f',@visit.total_fee %> Insured services: </b><%= sprintf '$%.2f',@visit.total_insured_fees %> <b>Other services:</b> <%= sprintf '$%.2f',@visit.total_non_insured_fees %>
+<b>Vital signs</b>: T: <%= @visit.temp %> P: <%= @visit.pulse %> BP: <%= @visit.bp %>
 <b>Duration </b>: <%= @visit.duration %> minutes
 <b>Status </b>: <%= @visit.status_str %> 
 <b>Entry by </b>: <%= @visit.entry_by %>
 <b>Entered at </b>: <%= @visit.entry_ts %>
-<b>Export file </b>: <%= @visit.export_file %>
+<b>Billing Ref# </b>: <%= @visit.export_file %>
 <% if @visit.amount.present? %>
 <b>Amount Paid </b>: <%= sprintf '$%.2f', @visit.amount %>
 <% end %>
