--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -6,8 +6,9 @@
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
 
+			<li> RA file is now imported from the ministry site. Claims and services are available for the last 2 billing cycles </li>
 			<li> Previously unbilled visits are shown in daysheet now </li>
-			<li> 3 new 3rd Party procedures: G10, G20, G30. Use for cash services with multiple units to get the right amount. Receipt will show reason for the visit in description and visit notes in notes box </li>
+			<li> 4 new 3rd Party procedures: G10, G20, G30, G50. Use for cash services with multiple units to get the right amount. Receipt will show reason for the visit in description and visit notes in notes box </li>
 			<li> Patient search box now supports searches by full or partial ohip number, last name[, first name], last name can now contain spaces, search by DOB: dd-mm-yyyy or dd-mmm-yyyy (abbrev string or digits for month) </li>
 			<li> Daily charts added until May 15 2006 </li>
 			<li> Merged patients records with and without ohip number </li>
