--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -9,12 +9,7 @@
 <table class="tbl table-hover" >
   <thead>
       <tr>
-	  <% if date  %>
-	    <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
-	  <% else %>
-	    <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
-	  <%end %>
-
+	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Date/Time' %></th>
 	  <th class="tbl_md">
 	  <% if @docs.size > 1 %>
           <span class="dropdown" >
