--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -7,13 +7,15 @@
 	  <th class="tbl_sm">SvcDate </th>
           <th class="tbl_sm">Provider</th>
  	  <th class="tbl_sm">Services</th>
+ 	  <th class="tbl_sm">Paid</th>
           <th class="tbl_sm">Acc #</th>
-          <th class="tbl_sm">Prov</th>
 	  <th class="tbl_sm">HC#</th> 
+          <th class="tbl_sm">Prov</th>
 	  <th class="tbl_sm">Pmt Pgm</th> 
 	  <th class="tbl_sm">RA file</th>
           <th class="tbl_sm">Date paid</th>
-	  <th class="tbl_md">RMB Patient Name</th> 
+	  <th class="tbl_sm">Visit</th> 
+	  <th class="tbl_sm">RMB Patient Name</th> 
       </tr>
   </thead>
   <tbody>
