--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -7,6 +7,6 @@
  <li class="divider"></li>
  <li> <%= link_to "Doctors", doctors_path, method: :get %> </li>
  <li> <%= link_to "Export Files", export_files_path, method: :get %> </li>
-<%# <li> <%= link_to "Claims", claims_path, method: :get %> </li> %>
+ <li> <%= link_to "Claims", claims_path, method: :get %> </li> 
 </ul>
 </li>
