--- a/app/views/claims/_claim.html.erb
+++ b/app/views/claims/_claim.html.erb
@@ -4,19 +4,21 @@
 %>
    <tr>
 	    <% if patient.present? && visit.present? %>
-	      <td><%= link_to claim.claim_no, patient_visit_path(patient, visit) %></td>
+	      <td><%= link_to claim.claim_no, claim_path(claim) %></td>
     	    <% else %>
 	      <td><%= claim.claim_no %></td>
 	    <% end %>
 	    <td><%= claim.date %></td>
 	    <td><%= doctor.lname %></td>
 	    <td><%= claim.services.size %></td>
+	    <td><%= sprintf("$%.2f",claim.damt_paid) %></td>
 	    <td><%= claim.accounting_no %></td>
-	    <td><%= claim.province %></td>
 	    <td><%= "#{claim.ohip_num} #{claim.ohip_ver}" %></td>
+	    <td><%= claim.province %></td>
 	    <td><%= claim.pmt_pgm %></td>
 	    <td><%= claim.ra_file %></td>
 	    <td><%= claim.date_paid %></td>
+	    <td><%= link_to 'visit', patient_visit_path(patient, visit) %></td>
 	    <td><%= "#{claim.pat_lname} #{claim.pat_fname}" %></td>
 
      </tr>
