--- a/app/views/claims/show.html.erb
+++ b/app/views/claims/show.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <aside class="col-md-6">
     <section class="user_info">
-	   <pre class="pre-scrollable" >
+	   <pre class="pre-scrollable-lg" >
 	   <b> Service date </b>: <%= @claim.date %>
 	   <b> Accounting Number</b>: <%= @claim.accounting_no %>
 	   <b> OHIP Number </b>: <%= @claim.ohip_num %> <%= @claim.ohip_ver %> (<%= @claim.province %>)
@@ -16,8 +16,6 @@
 	   <b> RA File </b>: <%= @claim.ra_file %>
 	   </pre>
     </section>
-
-
   </aside>
 
   <div class="col-md-6">
