--- a/app/views/claims/_claim.html.erb
+++ b/app/views/claims/_claim.html.erb
@@ -1,25 +1,30 @@
-<% visit = Visit.find(claim.visit_id) if claim.visit_id.present?
+<% visit = Visit.find(claim.visit_id) rescue nil if claim.visit_id.present?
    patient = Patient.find(visit.patient_id) rescue nil if visit.present?
    doctor = Doctor.find_by(provider_no: claim.provider_no)
 %>
-   <tr>
-	    <% if patient.present? && visit.present? %>
-	      <td><%= link_to claim.claim_no, claim_path(claim) %></td>
-    	    <% else %>
-	      <td><%= claim.claim_no %></td>
-	    <% end %>
-	    <td><%= claim.date %></td>
-	    <td><%= doctor.lname %></td>
-	    <td><%= claim.services.size %></td>
-	    <td><%= sprintf("$%.2f",claim.damt_paid) %></td>
-	    <td><%= claim.accounting_no %></td>
-	    <td><%= "#{claim.ohip_num} #{claim.ohip_ver}" %></td>
-	    <td><%= claim.province %></td>
-	    <td><%= claim.pmt_pgm %></td>
-	    <td><%= claim.ra_file %></td>
-	    <td><%= claim.date_paid %></td>
-	    <td><%= link_to 'visit', patient_visit_path(patient, visit) %></td>
-	    <td><%= "#{claim.pat_lname} #{claim.pat_fname}" %></td>
 
-     </tr>
+<tr>
+<% if patient.present? && visit.present? %>
+  <td><%= link_to claim.claim_no, claim_path(claim) %></td>
+<% else %>
+  <td><%= claim.claim_no %></td>
+<% end %>
+<td><%= claim.date %></td>
+<td><%= doctor.lname %></td>
+<td><%= claim.services.size %></td>
+<td><%= sprintf("$%.2f",claim.damt_paid) %></td>
+<td><%= claim.accounting_no %></td>
+<td><%= "#{claim.ohip_num} #{claim.ohip_ver}" %></td>
+<td><%= claim.province %></td>
+<td><%= claim.pmt_pgm %></td>
+<td><%= claim.ra_file %></td>
+<td><%= claim.date_paid %></td>
+<td>
+<% if visit.present? %>
+  <%= link_to 'visit', patient_visit_path(patient, visit) %>
+<% end %>
+</td>
+<td><%= "#{claim.pat_lname} #{claim.pat_fname}" %></td>
+
+</tr>
 
