--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -295,7 +295,7 @@ function select_statuses( proc ) {
         v[3].disabled = true;
         v[4].disabled = true;
      }else{
-        v[2].disabled = true;
+        v[2].disabled = false;
         v[3].disabled = true;
         v[4].disabled = false;
      }
