--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -8,8 +8,8 @@
          <%end %>
 	<td><%= visit.doctor.lname %></td>
 	<td><%= link_to pat.full_name, pat %></td>
-	<td><%= pat.ohip_num %></td>
-	<td><%= pat.ohip_ver %></td>
+	<td><%= pat.pat_type %></td>
+	<td><%= pat.ohip_num_full %></td>
 	<td><%= visit.diag_scode %></td>
 	<td><%= visit.proc_codes %></td>
 	<td><%= visit.all_btypes_str.join',' %></td>
