--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -27,11 +27,11 @@
           </th>
 
           <th class="tbl_lmd">Patient</th>
+          <th class="tbl_sm">Type</th>
           <th class="tbl_lsm">Health #</th>
-          <th class="tbl_sm">Ver.</th>
           <th class="tbl_lsm">Diagnosis</th>
-          <th class="tbl_xmd">Procedures</th>
-          <th class="tbl_sm">Bil.Type</th>
+          <th class="tbl_md">Services</th>
+          <th class="tbl_sm">B.Types</th>
           <th class="tbl_lsm">Status</th>
 	  <% if (date == Date.today && !@previously_unbilled.present?) || current_user.admin? %>
 	    <th class="tbl_sm"></th>
