--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -6,6 +6,12 @@
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
 
+			<li> Logout link moved down to footer </li>
+			<li> Pdf Reports are now generated right after creation and downloaded to client; No intermediate Show Report step </li>
+			<li> Pay stubs are now generated in <b>Docs>Paystubs</b> if new RA file was processed and paid claims imported for the latest billing cycle </li>
+			<li> Chart column link added to patient index. Link will be shown if chart is available </li>
+			<li> For processed claims, visit status will now show the link to paid claim, if one is available </li>
+			<li> Separate section added for Reference links in the header. Section includes: procedures, diagnoses, Insurance providers, Medications and Vaccines </li>
 			<li> RA file is now imported from the ministry site. Claims and services are available for the last 2 billing cycles </li>
 			<li> Previously unbilled visits are shown in daysheet now </li>
 			<li> 4 new 3rd Party procedures: G10, G20, G30, G50. Use for cash services with multiple units to get the right amount. Receipt will show reason for the visit in description and visit notes in notes box </li>
