--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -7,6 +7,7 @@
 	  <th class="tbl_sm">SvcDate </th>
           <th class="tbl_sm">Provider</th>
  	  <th class="tbl_sm">Services</th>
+ 	  <th class="tbl_sm">Subm</th>
  	  <th class="tbl_sm">Paid</th>
           <th class="tbl_sm">Acc #</th>
 	  <th class="tbl_sm">HC#</th> 
@@ -15,7 +16,7 @@
 	  <th class="tbl_sm">RA file</th>
           <th class="tbl_sm">Date paid</th>
 	  <th class="tbl_sm">Visit</th> 
-	  <th class="tbl_sm">RMB Patient Name</th> 
+	  <th class="tbl_sm">RMB Pat</th> 
       </tr>
   </thead>
   <tbody>
