--- a/app/views/claims/show.html.erb
+++ b/app/views/claims/show.html.erb
@@ -19,7 +19,7 @@
   </aside>
 
   <div class="col-md-6">
-    <h3>Services: (<%= @claim.services.count %>)</h3>
+    <h3>Services: (<%= @claim.svcs %>)</h3>
     <% if @claim.services.any? %>
         <table class="tbl">
   	  <thead>
