--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -31,7 +31,7 @@
 
   <div class="col-sm-4">
   <%= f.label :bills %>
-  <%= f.select :bills, TRUE_FALSE %>
+  <%= f.select :bills, [['Yes', true], ['No', false]] %>
   </div>
 
   <div class="col-sm-10"></div>
