--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -44,7 +44,7 @@
 <% if action_name == 'edit' %>
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   <% else %>  
-  <%= f.submit yield(:button_text), class: "btn btn-primary", formtarget: '_blank' %>
+  <%= f.submit yield(:button_text), class: "btn btn-primary", formtarget: 'Form' %>
 <% end %>
   </div>
 </div>
