--- a/app/views/paystubs/_paystub.html.erb
+++ b/app/views/paystubs/_paystub.html.erb
@@ -1,10 +1,24 @@
 <tr>
-<td><%= paystub.id %></td>
+<% if paystub.filespec.blank? %>
+  <td><%= link_to paystub.id, paystub, target: "Form" %></td>
+<% else %>
+  <td><%= link_to paystub.id, show_pdf_paystub_path(paystub), target: "Form" %></td>
+<% end %>
 <td><%= paystub.doctor.lname %></td>
-<td><%= paystub.year %></td>
-<td><%= paystub.month %></td>
-<td><%= paystub.net_amt %></td>
+<td><%= "#{paystub.month}/#{paystub.year}" %></td>
+<td><%= paystub.claims %></td>
+<td><%= paystub.services %></td>
+<td><%= sprintf("$%.2f",paystub.gross_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.net_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.ohip_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.cash_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.monthly_premium_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.ifh_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.wcb_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.hc_dep_amt) %></td>
+<td><%= paystub.ra_file %></td>
 <% if current_user.admin?  %>
-<td>delete</td>
+	<td><%= link_to "Delete", paystub_path(paystub), method: :delete, data: { confirm: "Are you sure you want to delete paystub #{paystub.id} for doctor #{paystub.doctor.lname}" } %></td>
 <% end %>
 </tr>
+
