--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
 <div class="col-sm-2 col-sm-offset-4" >
   <%= f.label "Select Doctor" %>
-  <%= f.collection_select :doc_id, get_active_doctors, :id, :lname, prompt: 'All Active', selected: @report.doc_id || doc_id %>
+  <%= f.collection_select :doc_id, get_active_doctors, :id, :lname,  selected: @report.doc_id || doc_id %>
 </div >
     
 <div class="col-sm-2" >
@@ -46,6 +46,14 @@
 
 </div>
 <% end %>
+
+<div class='spacer-10'></div>
+<!-- Row 5 -->
+<div class="row">
+<div class="col-sm-4 col-sm-offset-4">
+  <%= button_to 'Back', reports_path, class: "btn btn-primary",  method: 'get' %>
+</div>
+</div>
 
 <script>
 $(document).ready(function () {
