--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,11 +3,12 @@
 <table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
-          <th>Report</th>
+          <th>Report#</th>
           <th>Doctor</th>
           <th>Type</th>
           <th>Date</th>
           <th>To</th>
+          <th>File</th>
 	   <% if current_user.admin?  %>
           <th></th>
 	  <% end %>
