--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -3,20 +3,19 @@
 <table class="tbl table-hover"> 
   <thead>
       <tr>
-          <th class="tbl_sm">Claim #</th>
-	  <th class="tbl_sm">SvcDate </th>
-          <th class="tbl_sm">Provider</th>
- 	  <th class="tbl_sm">Services</th>
- 	  <th class="tbl_sm">Subm</th>
- 	  <th class="tbl_sm">Paid</th>
-          <th class="tbl_sm">Acc #</th>
-	  <th class="tbl_sm">HC#</th> 
-          <th class="tbl_sm">Prov</th>
-	  <th class="tbl_sm">Pmt Pgm</th> 
-	  <th class="tbl_sm">RA file</th>
-          <th class="tbl_sm">Date paid</th>
-	  <th class="tbl_sm">Visit</th> 
-	  <th class="tbl_sm">RMB Pat</th> 
+          <th>Claim #</th>
+	  <th>Svc Date </th>
+          <th>Provider</th>
+ 	  <th class='tbl_sm'>Svcs</th>
+ 	  <th>Submitted</th>
+ 	  <th>Paid</th>
+          <th>Acc #</th>
+	  <th>HC#</th> 
+          <th class='tbl_sm'>Prov</th>
+	  <th class='tbl_sm'>Type</th> 
+	  <th>RA file</th>
+          <th>Date paid</th>
+	  <th>Visit</th> 
       </tr>
   </thead>
   <tbody>
