--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -28,7 +28,7 @@
 
           <th class="tbl_lmd">Patient</th>
           <th class="tbl_sm">Type</th>
-          <th class="tbl_lsm">Health #</th>
+          <th class="tbl_md">Health #</th>
           <th class="tbl_lsm">Diagnosis</th>
           <th class="tbl_md">Services</th>
           <th class="tbl_sm">B.Types</th>
